infra/K8S/bidding-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bidding-svc
  labels:
    app: bidding-svc
spec:
  selector:
    matchLabels:
      app: bidding-svc
  template:
    metadata:
      name: bidding-svc
      labels:
        app: bidding-svc
    spec:
      containers:
        - name: bidding-svc
          image: pebi3op/bidding-svc
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bidding-clusterip
spec:
  type: ClusterIP
  selector:
    app: bidding-svc
  ports:
    - port: 80
      targetPort: 80
