infra/K8S/gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-svc
  labels:
    app: gateway-svc
spec:
  selector:
    matchLabels:
      app: gateway-svc
  template:
    metadata:
      name: gateway-svc
      labels:
        app: gateway-svc
    spec:
      containers:
        - name: gateway-svc
          image: pebi3op/gateway-svc
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-clusterip
spec:
  type: ClusterIP
  selector:
    app: gateway-svc
  ports:
    - port: 80
      targetPort: 80
