infra/K8S/webapp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-svc
  labels:
    app: webapp-svc
spec:
  selector:
    matchLabels:
      app: webapp-svc
  template:
    metadata:
      name: webapp-svc
      labels:
        app: webapp-svc
    spec:
      containers:
        - name: webapp-svc
          image: pebi3op/web-app
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-clusterip
spec:
  type: ClusterIP
  selector:
    app: webapp-svc
  ports:
    - port: 3000
      targetPort: 3000
