infra/K8S/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.carsties.local
        - api.carsties.local
        - id.carsties.local
      secretName: carsties-app-tls
  rules:
    - host: app.carsties.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: webapp-clusterip
                port:
                  number: 3000
    - host: api.carsties.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: gateway-clusterip
                port:
                  number: 80
    - host: id.carsties.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: identity-clusterip
                port:
                  number: 80
